<resources>
    <string name="app_name">Food Donation</string>
    <string name="food_donation_app">Food Donation App</string>
    <string name="login">Login</string>
    <string name="welcome_msg">Welcome to our food donation app</string>
    <string name="slogan">Don’t be rude, donate some food.</string>
    <string name="sp1">Food is Life so,dont waste it</string>
    <string name="sp2">and donate it</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_password1">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title1">1.3 billion tons of food are wasted every year</string>
    <string name="title2">This amounts to US$1 trillion dollars of wasted or lost food</string>
    <string name="title3">If wasted food was a country, it would be the third largest producer of carbon dioxide in the world, after the United States and China</string>
    <string name="title4">Just one quarter of all wasted food could feed the 795 million undernourished people around the world who suffer from hunger</string>
    <string name="title5">Food waste in rich countries (222 million tons) is approximately equivalent to all of the food produced in Sub-Saharan Africa (230 million tons)</string>
    <string name="title6">A European or North American consumer wastes almost 100 kilograms of food annually, which is more than his or her weight (70 kilograms)</string>
    <string name="title7">A European or North American consumer wastes 15 times more food than a typical African consumer</string>
    <string name="title8">Lack of technology and infrastructure is the main cause of food waste in Africa, as opposed to household food waste in the developed world</string>
    <string name="title9">Food waste in Europe alone could feed 200 million hungry people</string>
    <string name="title10">Food waste generates 3.3 billions tons of carbon dioxide, which accelerates global climate change</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="app_name">Navigation Drawer</string>-->
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="profile">Profile</string>
    <string name="donate_food">Donate Food</string>
    <string name="news">News</string>
    <string name="logout">LogOut</string>
    <string name="home">Home</string>
    <string name="food_donation">Food Donation</string>
    <string name="about">About</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="food_type">Food Type :</string>
    <string name="enter_nearest_ngo_address">Enter Nearest NGO Address</string>
    <string name="enter_quantity_per_person_approx">Enter Quantity Per Person (Approx)</string>
    <string name="donate">Donate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="address">Address</string>
    <string name="ngo_address">NGO Address</string>
    <string name="contact_no">Contact No</string>
    <string name="foodtype1">Food Type</string>
    <string name="quantity">Quantity</string>
    <string name="pay_for_donation">Pay For Donation</string>
    <string name="made_by_ayush_bhavsar">Made By : Ayush Bhavsar</string>
    <string name="email_id_ayush75567_gmail_com">Email Id: ayush75567@gmail.com</string>
    <string name="_Mobile_No_6353548343">Mobile No: 6353548343</string>
    <string name="github_id_ayush75567">Github id: Ayush75567</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay">Pay</string>
</resources>