<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
    android:layout_width="@dimen/_350sdp"
    android:layout_height="@dimen/_90sdp"
    android:id="@+id/linear_1"
    android:background="@drawable/custom_background"
    android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/login"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/linear_1"
        android:id="@+id/name"
        android:hint="@string/enter_your_name"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/custom_border"
        android:paddingLeft="@dimen/_10sdp"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/name"
        android:id="@+id/email"
        android:hint="@string/enter_email_id"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/custom_border"
        android:paddingLeft="@dimen/_10sdp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"/>

    <LinearLayout
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_45sdp"
        android:id="@+id/linear_2"
        android:layout_below="@id/email"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_btn"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/gender"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="50dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_2sdp"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="@dimen/_16sdp" />

        </RadioGroup>

    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/linear_2"
            android:id="@+id/dob"
            android:hint="@string/date_of_birth"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColorHint="@color/black"
            android:background="@drawable/custom_border"
            android:paddingLeft="@dimen/_10sdp"
            android:drawableLeft="@drawable/baseline_date_range_24"
            android:drawablePadding="10dp"/>

        <EditText
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/dob"
            android:id="@+id/address"
            android:hint="@string/enter_your_address"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColorHint="@color/black"
            android:background="@drawable/custom_border"
            android:paddingLeft="@dimen/_10sdp"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="10dp"/>

    <Spinner
        android:popupBackground="#C3C1C1"
        android:background="#C3C1C1"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/address"
        android:id="@id/spinner"/>


    <EditText
        android:inputType="phone"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/spinner"
        android:id="@+id/contact"
        android:hint="@string/enter_phone_number"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/custom_border"
        android:paddingLeft="@dimen/_10sdp"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/contact"
        android:id="@+id/signup_pwd"
        android:hint="@string/enter_password"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/custom_border"
        android:paddingLeft="@dimen/_10sdp"
        android:drawableLeft="@drawable/outline_lock_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/signup_pwd"
        android:id="@+id/signup_cpwd"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/custom_border"
        android:paddingLeft="@dimen/_10sdp"
        android:drawableLeft="@drawable/twotone_lock_person_24"
        android:drawablePadding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_cpwd"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_80sdp"
        android:text="@string/sign_up"
        android:id="@+id/signup_button"
        android:layout_marginBottom="@dimen/_10sdp"/>
    </RelativeLayout>
</ScrollView>