<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_176sdp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="@dimen/_16sdp"
        android:background="#4D5BD1"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/menu_home"
            android:drawableLeft="@drawable/home"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/profile"
            android:drawableLeft="@drawable/name"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/donate"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/donate_food"
            android:drawableLeft="@drawable/donate"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pay"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/pay_for_donation"
            android:drawableLeft="@drawable/gpay"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changepwd"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/change_password"
            android:drawableLeft="@drawable/twotone_lock_person_24"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/news"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/news"
            android:drawableLeft="@drawable/baseline_newspaper_24"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/about"
            android:drawableLeft="@drawable/info"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/logout"
            android:drawableLeft="@drawable/baseline_exit_to_app_24"
            android:textSize="@dimen/_20sdp"
            android:drawablePadding="8dp"/>

    </LinearLayout>

</LinearLayout>