<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".DonateFood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbox"/>

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DonateFood">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/first_name"
                android:hint="@string/enter_first_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/first_name"
                android:id="@+id/last_name"
                android:hint="@string/enter_last_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/last_name"
                android:id="@+id/donate_email"
                android:hint="@string/enter_email_id"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"/>
            <EditText
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/donate_email"
                android:id="@+id/donate_address"
                android:hint="@string/enter_your_address"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/address"
                android:drawablePadding="10dp"/>

            <EditText
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/donate_address"
                android:id="@+id/donate_ngoaddress"
                android:hint="@string/enter_nearest_ngo_address"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/address"
                android:drawablePadding="10dp"/>

            <EditText
                android:inputType="phone"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/donate_ngoaddress"
                android:id="@+id/donate_contact"
                android:hint="@string/enter_phone_number"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/baseline_phone_24"
                android:drawablePadding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_type"
                android:id="@+id/donate_text"
                android:layout_below="@id/donate_contact"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_25sdp"/>


            <Spinner
                android:popupBackground="#C3C1C1"
                android:background="#C3C1C1"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@id/donate_text"
                android:id="@id/food_item"/>

            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/food_item"
                android:id="@+id/donate_enterquantity"
                android:hint="@string/enter_quantity_per_person_approx"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_border"
                android:paddingLeft="@dimen/_10sdp"
                android:drawableLeft="@drawable/weight"
                android:drawablePadding="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donate_enterquantity"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_80sdp"
                android:text="@string/donate"
                android:id="@+id/donate_btn"
                android:layout_marginBottom="@dimen/_10sdp"/>
        </RelativeLayout>
    </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>